<resources>
    <string name="app_name">urPuppy</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="email">E-mail</string>
    <string name="password">Senha</string>
    <string name="forgot_password">Esqueceu a sua senha?</string>
    <string name="login">Entrar</string>
    <string name="noAccount">Entrar sem conta</string>
    <string name="name">Seu nome completo</string>
    <string name="singup">Registrar-se</string>
    <string name="title_activity_login">UrPuppy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pet_description">Um teste testudo de testes testados enquanto eu testo alguns teste que precisei testar para o teste que estou
        testando Um teste testudo de testes testados enquanto eu testo alguns teste que precisei testar para o teste que estou testandoUm teste testudo de testes testados enquanto eu testo alguns teste que precisei testar para o teste que estou testando</string>
</resources>