<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_alignWithParentIfMissing="false"
    android:background="@drawable/bg_gradient"

    android:gravity="center"
    android:orientation="vertical"
    android:weightSum="2"

    tools:context=".core.auth.view.LoginActivity">


    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <ImageView
        android:layout_width="202dp"
        android:layout_height="6dp"
        android:layout_marginTop="60dp"
        android:layout_weight="1"
        android:importantForAccessibility="no"
        android:src="@drawable/logo" />

    <LinearLayout
        android:layout_weight="1"
        android:gravity="top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="24dp">

        <TextView
            android:text="Insira suas informações para o cadastro"
            android:textColor="@color/textColor"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="36dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/textfield_bg"

            android:hint="@string/name"
            android:textColorHint="@color/hint_text"
            app:boxBackgroundColor="@android:color/transparent"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"

            app:endIconMode="clear_text"
            app:endIconTint="@color/primaryYellow"
            app:hintTextColor="@color/primaryYellow"

            android:layout_marginBottom="16dp">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEdit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:background="@android:color/transparent"
                android:inputType="textEmailAddress"
                android:textColor="@color/textColor" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/textfield_bg"

            android:hint="@string/email"
            android:textColorHint="@color/hint_text"
            app:boxBackgroundColor="@android:color/transparent"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"

            app:endIconMode="clear_text"
            app:endIconTint="@color/primaryYellow"
            app:hintTextColor="@color/primaryYellow">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameEdit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:background="@android:color/transparent"
                android:inputType="textEmailAddress"
                android:textColor="@color/textColor" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"

            android:background="@drawable/textfield_bg"
            android:hint="@string/password"
            android:textColorHint="@color/hint_text"
            app:boxBackgroundColor="@android:color/transparent"
            app:boxStrokeWidth="0dp"

            app:boxStrokeWidthFocused="0dp"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/primaryYellow"

            app:hintTextColor="@color/primaryYellow">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEdit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:background="@android:color/transparent"
                android:inputType="textPassword"
                android:textColor="@color/textColor" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:layout_marginTop="32dp"

            style="@style/ShapeAppearanceOverlay.Material3.Button"
            android:id="@+id/singup_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@drawable/button_bg_primary"

            app:backgroundTint="@color/black"
            android:text="@string/singup"
            android:textColor="@color/white"/>

    </LinearLayout>


</LinearLayout>