<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_alignWithParentIfMissing="false"
    android:background="@drawable/bg_gradient"

    android:gravity="center"
    android:orientation="vertical"
    android:weightSum="3"

    tools:context=".core.auth.view.LoginActivity">


    <ImageView
        android:layout_width="198dp"
        android:layout_height="141dp"
        android:layout_weight="1"
        android:importantForAccessibility="no"
        android:src="@drawable/logo" />

    <LinearLayout
        android:layout_weight="1"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="24dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/textfield_bg"

            android:hint="@string/email"
            android:textColorHint="@color/black"
            app:boxBackgroundColor="@android:color/transparent"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"

            app:endIconMode="clear_text"
            app:endIconTint="@color/primaryYellow"
            app:hintTextColor="@color/primaryYellow">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEdit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:background="@android:color/transparent"
                android:inputType="textEmailAddress"
                android:textColor="@color/textColor" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"

            android:background="@drawable/textfield_bg"
            android:hint="@string/password"
            android:textColorHint="@color/black"
            app:boxBackgroundColor="@android:color/transparent"
            app:boxStrokeWidth="0dp"

            app:boxStrokeWidthFocused="0dp"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/primaryYellow"

            app:hintTextColor="@color/primaryYellow">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEdit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:background="@android:color/transparent"
                android:inputType="textPassword"
                android:textColor="@color/textColor" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"

            android:padding="0dp"
            android:layout_marginVertical="8dp"
            android:text="@string/forgot_password"
            android:textAlignment="textEnd"
            android:textColor="@color/black"
            android:textSize="12sp"

            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
            style="@style/ShapeAppearanceOverlay.Material3.Button"
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="loadAct"

            android:background="@drawable/button_bg_primary"

            android:text="@string/login"
            android:textColor="@color/white"
            app:backgroundTint="@color/black" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="bottom"
        android:orientation="vertical"

        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:gravity="center"
            android:orientation="horizontal">

            <View
                android:layout_width="200dp"
                android:layout_height="1dp"
                android:background="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="  ou entrar com  "

                android:textColor="@color/textColor"
                android:textStyle="bold" />

            <View
                android:layout_width="200dp"
                android:layout_height="1dp"
                android:background="@color/black" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            style="@style/ShapeAppearanceOverlay.Material3.Button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"

            app:backgroundTint="@color/black"

            android:paddingHorizontal="140dp"
            android:drawableLeft="@drawable/google"
            android:text="Google"
            android:textColor="@color/white"

            android:textAlignment="textStart"
            android:textSize="12sp"
            android:textStyle="bold"
            app:cornerRadius="24dp" />

        <com.google.android.material.button.MaterialButton
            style="@style/ShapeAppearanceOverlay.Material3.Button"
            android:layout_width="match_parent"
            android:layout_height="60dp"

            android:drawableLeft="@drawable/facebook"

            android:paddingHorizontal="135dp"
            android:text="Facebook"
            android:textColor="@color/white"
            app:backgroundTint="@color/black"

            android:textAlignment="textStart"
            android:textSize="12sp"
            android:textStyle="bold"
            app:cornerRadius="24dp" />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:id="@+id/noAccount_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"

            android:text="@string/noAccount"
            android:textColor="@color/black"
            android:textAlignment="center"

            android:textSize="14sp"

            android:textStyle="bold"
            app:cornerRadius="24dp"
            app:strokeColor="@color/textColor"
            app:strokeWidth="2dp" />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.Material3.Button.TextButton"
            android:id="@+id/go_to_sing_Up_Btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Não possui uma conta? Criar"
            android:textColor="@color/black"
            android:textAlignment="center"

            android:layout_marginTop="20dp"

            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>


</LinearLayout>